--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^4.0.3",
+    "react-uid": "^2.3.1",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11",
+    "zustand": "^3.5.10"
   },
   "scripts": {
     "start": "react-scripts start",
